set selectbox max-width #4692  Port K50

--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -1106,3 +1106,7 @@ div.krating > label:active {
 .dropdown-submenu > a::after {
   display: none !important;
 }
+
+.inputbox#catid {
+  max-width: 250px;
+}
