user icon in Whoisonline is not getting styled #4765

--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -1109,3 +1109,8 @@ div.krating > label:active {
 .inputbox#catid {
 	max-width: 250px;
 }
+
+#whoisonlinelist .img-circle  {
+	margin-right: 10px;
+	margin-bottom: 10px;
+}
