--- a/src/components/com_kunena/template/crypsisb3/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsisb3/assets/less/general.less
@@ -1250,3 +1250,8 @@ div.moderators {
 .inputbox#catid {
 	max-width: 250px;
 }
+
+#whoisonlinelist .img-circle {
+	margin-right: 10px;
+	margin-bottom: 10px;
+}
