--- a/src/components/com_kunena/template/crypsis/assets/less/mediaqueries.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/mediaqueries.less
@@ -99,7 +99,9 @@
 	}
 
 	a.dropdown-toggle,
-	i.icon-large {
+	i.icon-large,
+	.glyphicon-large,
+	.fa-large {
 		color: inherit;
 	}
 
@@ -230,6 +232,8 @@
 	}
 
 	a.dropdown-toggle,
+	.fa-large,
+	.glyphicon-large,
 	i.icon-large {
 		color: inherit;
 	}
