user icon in Whoisonline is not getting styled #4765 #4766  Port K50

--- a/src/components/com_kunena/template/crypsis/assets/less/general.less
+++ b/src/components/com_kunena/template/crypsis/assets/less/general.less
@@ -1110,3 +1110,8 @@ div.krating > label:active {
 .inputbox#catid {
   max-width: 250px;
 }
+
+#whoisonlinelist .img-circle {
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
